[package]
name = "demo-excel-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
rust_xlsxwriter = "0.92"
actix-web = "4.12"
actix-files = "0.6"
rand = "0.8"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
rust_decimal = { version = "1", features = ["db-postgres"] }
postgres = "0.19"
excelstream = "0.11.0"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "export_stream"
path = "src/bin/export_stream.rs"
